--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -356,25 +356,31 @@
     "    print(c2.get_shape())\n",
     "    \n",
     "    #fully connected\n",
-    "    hidden_size = 500\n",
+    "    hidden_size = 256\n",
     "    fw1 = tf.Variable(tf.truncated_normal([8*8*n2,hidden_size], mean=mu, stddev=sigma))\n",
     "    fb1 = tf.Variable(tf.zeros(hidden_size))\n",
     "    \n",
     "    h1 = tf.nn.relu( tf.matmul(flat,fw1)+fb1 )\n",
     "    \n",
-    "    fw2 = tf.Variable(tf.truncated_normal([hidden_size,n_classes], mean=mu, stddev=sigma))\n",
-    "    fb2 = tf.Variable(tf.zeros(n_classes))\n",
+    "    #second fully connected layer\n",
+    "    fw2 = tf.Variable(tf.truncated_normal([hidden_size,hidden_size], mean=mu, stddev=sigma))\n",
+    "    fb2 = tf.Variable(tf.zeros(hidden_size))\n",
+    "    \n",
+    "    h2 = tf.nn.relu( tf.matmul(h1,fw2)+fb2 )\n",
+    "    \n",
+    "    fw3 = tf.Variable(tf.truncated_normal([hidden_size,n_classes], mean=mu, stddev=sigma))\n",
+    "    fb3 = tf.Variable(tf.zeros(n_classes))\n",
     "    \n",
     "    #logits\n",
-    "    h2 = tf.matmul(h1,fw2)+fb2\n",
-    "    return h2\n",
+    "    h3 = tf.matmul(h2,fw3)+fb3\n",
+    "    return h3\n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -390,7 +396,7 @@
    "source": [
     "logits = model(x)\n",
     "loss_operation = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits, one_hot_y))\n",
-    "optimizer = tf.train.AdamOptimizer()\n",
+    "optimizer = tf.train.AdamOptimizer(.001)\n",
     "training_operation = optimizer.minimize(loss_operation)\n",
     "correct_prediction = tf.equal(tf.argmax(logits, 1), tf.argmax(one_hot_y, 1))\n",
     "accuracy_operation = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))"
@@ -398,7 +404,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "153.16015625"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -408,84 +434,110 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2145.97\n",
-      "0.0033344\n",
-      "0.000103246\n",
-      "5.38748e-05\n",
-      "3.72153e-05\n",
-      "1.94003e-05\n",
-      "1.00838e-05\n",
-      "7.61924e-06\n",
-      "5.95789e-06\n",
-      "4.8002e-06\n",
-      "3.97855e-06\n",
-      "3.38691e-06\n",
-      "2.93697e-06\n",
-      "2.58083e-06\n",
-      "2.29095e-06\n",
-      "2.04195e-06\n",
-      "1.82811e-06\n",
-      "1.65134e-06\n",
-      "1.49411e-06\n",
-      "1.36216e-06\n",
-      "1.24999e-06\n",
-      "1.14867e-06\n",
-      "1.05402e-06\n",
-      "9.74274e-07\n",
-      "9.02752e-07\n",
-      "8.37189e-07\n",
-      "7.77587e-07\n",
-      "7.23826e-07\n",
-      "6.74952e-07\n",
-      "6.31442e-07\n",
-      "39.192 0.373872\n"
+      "0 2044.4 0.03125 0.0372922\n",
+      "100 9.13007 0.359375 0.279572\n",
+      "200 4.08443 0.347656 0.346081\n",
+      "300 2.33895 0.453125 0.425891\n",
+      "400 1.72062 0.617188 0.511085\n",
+      "500 0.951491 0.730469 0.569834\n",
+      "600 0.919224 0.78125 0.612273\n",
+      "700 0.758651 0.785156 0.648061\n",
+      "800 0.478627 0.867188 0.67791\n",
+      "900 0.414026 0.871094 0.6962\n",
+      "1000 0.437631 0.863281 0.68852\n",
+      "1100 0.345972 0.886719 0.728029\n",
+      "1200 0.268167 0.933594 0.733809\n",
+      "1300 0.194649 0.9375 0.741093\n",
+      "1400 0.252153 0.929688 0.751703\n",
+      "1500 0.246075 0.910156 0.752494\n",
+      "1600 0.202616 0.953125 0.774189\n",
+      "1700 0.145697 0.957031 0.777277\n",
+      "1800 0.167801 0.953125 0.777277\n",
+      "1900 0.15344 0.945312 0.788995\n",
+      "2000 0.104278 0.953125 0.79905\n",
+      "2100 0.13767 0.960938 0.797388\n",
+      "2200 0.0917141 0.972656 0.791449\n",
+      "2300 0.118709 0.96875 0.798021\n",
+      "2400 0.0790873 0.980469 0.804276\n",
+      "2500 0.0862883 0.96875 0.806414\n",
+      "2600 0.126521 0.972656 0.791053\n",
+      "2700 0.0451307 0.976562 0.813065\n",
+      "2800 0.0705624 0.964844 0.807839\n",
+      "2900 0.0535418 0.984375 0.821141\n",
+      "3000 0.0542518 0.980469 0.821378\n",
+      "3100 0.0243407 0.988281 0.828979\n",
+      "3200 0.0243875 0.996094 0.835947\n",
+      "3300 0.0662216 0.980469 0.830642\n",
+      "3400 0.0708244 0.988281 0.818211\n",
+      "3500 0.167909 0.976562 0.813144\n",
+      "3600 0.0646889 0.984375 0.82407\n",
+      "3700 0.0552358 0.976562 0.835551\n",
+      "3800 0.0224243 0.992188 0.841172\n",
+      "3900 0.0370748 0.992188 0.835867\n",
+      "4000 0.0224147 0.992188 0.844102\n",
+      "4100 0.147604 0.976562 0.834838\n",
+      "4200 0.108695 0.984375 0.834046\n",
+      "4300 0.114007 0.980469 0.822328\n",
+      "4400 0.0325067 0.984375 0.831117\n",
+      "4500 0.230756 0.96875 0.831829\n",
+      "4600 0.00955803 0.996094 0.853286\n",
+      "4700 0.0879204 0.988281 0.858354\n",
+      "4800 0.0173257 0.992188 0.845527\n",
+      "4900 0.00357915 1.0 0.857641\n",
+      "5000 0.105238 0.988281 0.848694\n",
+      "5100 0.0596102 0.988281 0.85099\n",
+      "5200 0.0163976 0.992188 0.862787\n",
+      "5300 0.123648 0.988281 0.839351\n",
+      "5400 0.0278404 0.992188 0.856612\n",
+      "5500 0.146544 0.976562 0.852574\n",
+      "5600 0.0524236 0.984375 0.860887\n",
+      "5700 0.0101809 0.992188 0.875693\n",
+      "5800 0.00439185 1.0 0.874981\n",
+      "5900 0.00275883 1.0 0.875297\n",
+      "6000 0.00104371 1.0 0.871497\n",
+      "6100 0.0713025 0.988281 0.879731\n",
+      "6200 0.0185899 0.992188 0.87411\n",
+      "6300 0.00191286 1.0 0.875456\n",
+      "6400 0.0432878 0.988281 0.867617\n",
+      "6500 0.00594868 1.0 0.875456\n",
+      "6600 0.00386604 1.0 0.882107\n",
+      "6700 0.0730899 0.980469 0.87696\n",
+      "6800 0.0501194 0.988281 0.888441\n",
+      "6900 0.0494958 0.992188 0.881552\n",
+      "7000 0.110545 0.988281 0.85962\n",
+      "7100 0.0142735 0.996094 0.893904\n",
+      "7200 0.0334412 0.992188 0.881236\n",
+      "7300 0.0147011 0.996094 0.85487\n",
+      "7400 0.0812793 0.984375 0.888045\n",
+      "7500 0.0357853 0.996094 0.889787\n",
+      "7600 0.00433697 0.996094 0.877673\n",
+      "7649 0.022354 0.992188 0.898179\n"
      ]
     }
    ],
    "source": [
-    "BATCH_SIZE=1000\n",
+    "BATCH_SIZE=256\n",
+    "NUM_EPOCHS=50\n",
+    "N = NUM_EPOCHS * int(len(X_train)/BATCH_SIZE)\n",
     "\n",
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
     "    \n",
-    "    sample_idx = np.random.permutation(len(y_train))[:BATCH_SIZE]\n",
-    "    feed_dict = {x:X_train[sample_idx],y:y_train[sample_idx]}\n",
-    "\n",
-    "    for i in range(3000):\n",
-    "        _,loss = sess.run([training_operation, loss_operation], feed_dict=feed_dict)\n",
+    "    for i in range(N):\n",
+    "        sample_idx = np.random.permutation(len(y_train))[:BATCH_SIZE]\n",
+    "        feed_dict = {x:X_train[sample_idx],y:y_train[sample_idx]}\n",
+    "        _,loss, acc = sess.run([training_operation, loss_operation,accuracy_operation], feed_dict=feed_dict)\n",
     "    \n",
     "    \n",
     "        if i%100==0:\n",
-    "            print(loss)\n",
+    "            accuracy =  sess.run([accuracy_operation], feed_dict={x:X_test, y:y_test})\n",
+    "            print(i, loss, acc, accuracy[0])\n",
     "\n",
-    "            #sample_idx = np.random.permutation(len(y_train))[:BATCH_SIZE]\n",
-    "            #feed_dict = {x:X_train[sample_idx],y:y_train[sample_idx]}\n",
-    "    feed_dict = {x:X_test, y:y_test}\n",
-    "\n",
-    "    loss, accuracy =  sess.run([loss_operation, accuracy_operation], feed_dict=feed_dict)\n",
-    "\n",
-    "    print(loss, accuracy)\n",
+    "    accuracy =  sess.run([accuracy_operation], feed_dict={x:X_test, y:y_test})\n",
+    "    print(i, loss, acc, accuracy[0])\n",
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
