--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -1196,7 +1196,7 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "See above for visualization of new images, below for random sample of the valid set"
+    "See above for visualization of new images, below for random sample of the valid set. On the valid set the softmax probabilities are very certain. "
    ]
   },
   {
